[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pyroll-export"
description = "PyRoll rolling simulation framework - data export."
authors = [
    { name = "Max Weiner", email = "max.weiner@imf.tu-freiberg.de" },
    { name = "Christoph Renzing", email = "christoph.renzing@imf.tu-freiberg.de" },
    { name = "Matthias Schmidtchen", email = "matthias.schmidtchen@imf.tu-freiberg.de" },
    { name = "Max Stirl", email = "max.stirl@imf.tu-freiberg.de" },
]
license = "BSD-3-Clause"
readme = "README.md"
classifiers = [
    "Intended Audience :: Science/Research",
    "Intended Audience :: Manufacturing",
    "Operating System :: OS Independent",
    "Topic :: Scientific/Engineering",
    "License :: OSI Approved :: BSD License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Development Status :: 5 - Production/Stable",
    "Framework :: Hatch",
    "Framework :: IPython",
    "Framework :: Jupyter",
    "Framework :: Pytest",
    "Framework :: Sphinx",
    "Natural Language :: English",
]
requires-python = ">=3.9"

dependencies = [
    "pyroll-core ~= 2.0",
    "pluggy ~= 1.0",
    "pandas ~= 2.0",
    "lxml ~= 5.0",
    "pyyaml ~= 6.0",
]

dynamic = ["version"]

[project.entry-points."pyroll.cli.commands"]
export-csv = "pyroll.export.cli:export_csv"
export-json = "pyroll.export.cli:export_json"
export-yaml = "pyroll.export.cli:export_yaml"

[project.urls]
Homepage = "https://pyroll.readthedocs.io"
Repository = "https://github.com/pyroll-project/pyroll-cli"
Documentation = "https://pyroll.readthedocs.io/en/latest/basic/cli.html"
